BusOne/src/objects/Account_List_vod__c.object
<CustomObject>
    <description>Defines a list of accounts.</description>
    <fields>
        <fullName>Access_vod__c</fullName>
        <description>If set to Shared_vod then this list is visibile to users who are assigned to the parent territory or the child territories of the territory of the account list owner.</description>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared_vod</fullName>
                </value>
                <value>
                    <fullName>Private_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>Determines the order in which account lists are displayed.  Automatically updated to sort by most recently used as account lists are selected.</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icon_Name_vod__c</fullName>
        <description>The color for the account list.</description>
        <label>Icon Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_By_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who has locked this account list - locking prevents peers and subordinates from editing the list.</description>
        <label>Locked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked_Date_vod__c</fullName>
        <description>The date when this account list was last locked.</description>
        <label>Locked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account List</label>
    <nameField>
        <label>Account List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>